# bayesmsd

./: .gitignore  Makefile  README.md  cython_requirements.txt  pyproject.toml  setup.py
bayesmsd/: __init__.py  cython_imports.py  deco.py  fit.py  fitgroup.py  fitsum.py  gp.py  lib.py  parameters.py  profiler.py
bayesmsd/src/: gp.c  gp.pyx  gp_py.py
doc/: requirements.txt
doc/sphinx/source/: bayesmsd.rst  conf.py  index.rst  post-apidoc.vim  write_examples_rst.vim
examples/: 00_intro.ipynb  01_examples.ipynb  01_parameters.ipynb  02_generate.ipynb  03_model_free.ipynb  04_writing_new_fits.ipynb  05_profiler.ipynb  06_MCMC.ipynb  07_likelihood-landscapes.ipynb  README.md
tests/: context.py  test_bayesmsd.py
