[build-system]
requires = ["setuptools", "wheel", "numpy>=1.20"]
build-backend = "setuptools.build_meta"

[project]
name = "bayesmsd"
version = "0.1.4"
authors = [
  { name="Simon Grosse-Holz", email="sgh256@mit.edu" }
]
description = "Bayesian MSD fitting"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "noctiluca >=0",
    "rouse >=0",
    "numpy >=1.20",
    "scipy >=1.7",
    "tqdm >=4",
]

[project.urls]
"Homepage" = "https://github.com/OpenTrajectoryAnalysis/bayesmsd"
"Documentation" = "https://bayesmsd.readthedocs.org/en/latest"
"Bug Tracker" = "https://github.com/OpenTrajectoryAnalysis/bayesmsd/issues"
